--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,8 +15,8 @@ jobs:
           python-version: '3.x'
       - name: Install deps & build Sphinx
         run: |
-          pip install sphinx sphinx-rtd-theme
-          cd docs && sphinx-build -b html source build/html
+          pip install numpy matplotlib sphinx sphinx-rtd-theme
+          cd docs && make html
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
