--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Install deps & build Sphinx
         run: |
           pip install numpy matplotlib sphinx sphinx-rtd-theme
+          pip install -e .[docs]
           cd docs && make html
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
