--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,7 +15,8 @@ jobs:
           python-version: '3.x'
       - name: Install deps & build Sphinx
         run: |
-          pip install numpy matplotlib networkx sphinx sphinx-rtd-theme
+          pip install numpy matplotlib sphinx sphinx-rtd-theme
+          python -m pip install networkx
           cd docs && make html
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
